<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <ImageView
        android:id="@+id/cross"
        android:layout_width="@dimen/dp40"
        android:layout_height="@dimen/dp40"
        android:layout_marginTop="@dimen/dp16"
        android:layout_marginEnd="@dimen/dp16"
        android:background="@drawable/bg_circle_cross"
        android:contentDescription="@string/cross"
        android:src="@drawable/ic_cross"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/mainImage"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp0"
        android:contentDescription="@string/dosplash"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_gallery_placeholder"
        app:layout_constraintHeight_percent="0.65"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp12"
        android:layout_marginTop="@dimen/dp16"
        android:drawableStart="@drawable/location"
        android:drawablePadding="@dimen/dp8"
        android:gravity="center"
        android:textColor="@color/transparent_black"
        android:textSize="@dimen/sp12"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainImage"
        tools:text="Fraser Island, Australia" />

    <TextView
        android:id="@+id/detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp16"
        android:layout_marginTop="@dimen/dp14"
        android:drawablePadding="@dimen/dp8"
        android:lineSpacingExtra="@dimen/dp5"
        android:textColor="@color/transparent_black"
        android:textSize="@dimen/sp14"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location"
        tools:text="Fraseer Island shoot - I enjoyed the amazing “Fraser Island” absolutely beautiful place East Coast Australia" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp32"
        android:layout_marginStart="@dimen/dp16"
        android:layout_marginTop="@dimen/dp19"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail">

        <ImageView
            android:id="@+id/pg"
            android:layout_width="@dimen/dp32"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/photographer" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dp8"
            android:layout_toEndOf="@+id/pg"
            android:drawablePadding="@dimen/dp8"
            android:gravity="center"
            android:textColor="@color/transparent_black"
            android:textSize="@dimen/sp14"
            android:typeface="normal"
            tools:text="Georgie Scott" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>